syntax = "proto3";
option java_multiple_files = true;
package com.ampnet.crowdfunding.proto;

/********** IMPORTANT NOTE:***************
All amount (fiat) values in request and response messages are x100 format integers,
for example amount: 1550 is actually 15.50 EUR.
******************************************/

message TransactionsRequest {
    string wallet_data = 1;
}

message TransactionsResponse {
    repeated TransactionInfo transactions = 1;
}

message TransactionInfoRequest {
    string tx_hash = 1;
    string from = 2;
    string to = 3;
}

message TransactionInfo {
    string from_tx_hash = 1;
    string to_tx_hash = 2;
    string amount = 3;
    string date = 4;
    TransactionType type = 5;
    TransactionState state = 6;
    string tx_hash = 7;
    SupervisorStatus supervisor_status = 8;
}

////////// Types ///////////////////////////

enum TransactionState {
    MINED = 0;
    PENDING = 1;
    FAILED = 2;
}

enum TransactionType {
    DEPOSIT = 0;
    WITHDRAW = 1;
    INVEST = 2;
    SHARE_PAYOUT = 3;
    CANCEL_INVESTMENT = 4;
    APPROVE_INVESTMENT = 5;
    WALLET_CREATE = 6;
    ORG_CREATE = 7;
    PROJ_CREATE = 8;
    SELL_OFFER_CREATE = 9;
    APPROVE_USER_WITHDRAW = 10;
    PENDING_PROJ_WITHDRAW = 11;
    APPROVE_COUNTER_OFFER = 12;
    START_REVENUE_PAYOUT = 13;
    COOP_OWNERSHIP_TRANSFER = 14;
    EUR_OWNERSHIP_TRANSFER = 15;
    COUNTER_OFFER_PLACED = 16;
    COUNTER_OFFER_REMOVED = 17;
    SHARES_SOLD = 18;
}

enum SupervisorStatus {
    NOT_REQUIRED = 0;
    REQUIRED = 1;
    PROCESSED = 2;
}

service BlockchainService {
    rpc GetTransactions (TransactionsRequest) returns (TransactionsResponse);
    rpc GetTransactionInfo(TransactionInfoRequest) returns (TransactionInfo);
}
