syntax = "proto3";
option java_multiple_files = true;
package com.ampnet.userservice.proto;

message GetUserRequest {
    string uuid = 1;
}

message GetUsersRequest {
    repeated string uuids = 1;
}

message UserResponse {
    string uuid = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    bool enabled = 5;
    string coop = 6;
    string language = 7;
}

message UsersResponse {
    repeated UserResponse users = 1;
}

message UserWithInfoResponse {
    UserResponse user = 1;
    uint64 createdAt = 2;
    CoopResponse coop = 3;
}

message CoopRequest {
    string coop = 1;
}

message CoopResponse {
    string coop = 1;
    string name = 2;
    string hostname = 3;
    string logo = 4;
}

service UserService {
    rpc GetUsers (GetUsersRequest) returns (UsersResponse);
    rpc GetUserWithInfo (GetUserRequest) returns (UserWithInfoResponse);
}
